# plunger

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml
example_pipeline/: main.nf
src/: cli.rs  main.rs  plunger.rs  run.rs  task.rs  utils.rs
