[package]
name = "plunger"
version = "0.2.0"
edition = "2021"
authors = ["DMP <david@masponte.com>"]
readme = "README.md"
repository = "https://github.com/davidmasp/plunger"

[badges]
maintenance = { status = "experimental" }

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
fs_extra = "1.3.0"
human-repr = "1.1.0"
ignore = "0.4.23"
log = "0.4.22"
regex = "1.11.1"
simplelog = "0.12.2"
thiserror = "2.0.8"
